relocated all images/svgs, updated TODO, preliminary final round work, testing SnapSVG animations.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,34 @@
 	<script src="js/modernizr-latest.js"></script>
 </head>
 <body class="loading container-fluid">
-	<div class="wrapper">
-		<div class="nav-bar row">
+	<div class="nav-bar row">
 			<div class="device-menu">
-				<a class="menu-toggle" href="#"><span></span></a>
+				<!--<a class="menu-toggle" href="#"><span></span></a>-->
+				<a class="menu-toggle">
+<svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="50px" height="50px" viewBox="3.5 4.5 30 35" xml:space="preserve">
+					<g class="svg-menu-toggle">
+
+					<path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
+						c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
+					</path>
+					<path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
+					</path>
+					<path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
+						c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
+					</path>
+          <rect width="20" height="20" fill="none">
+
+					</rect>
+					</g>
+
+		</svg>
+</a>
 				<h1>The Cancer Sutra</h1>
 			</div>
-			<div class="foreplay"><a href="#/positions">Enough Foreplay!  &#10140;</a></div>
+			<!--<div class="foreplay"><a href="#/positions">Enough Foreplay!  &#10140;</a></div>-->
 		</div>
+	<div class="wrapper">
 		<nav class="row">
 			<ul class="navigation">
 				<li><a class="nav-about" href="#">About</a></li>
@@ -42,14 +62,14 @@
 						<li><a href data-filter-type="cancer-type" data-filter="prostate" data-toggle="off">Prostate</a></li>
 					</ul>
 				</div>
-				<div data-filter-type="partnership" class="filter partnership">
+				<!--<div data-filter-type="partnership" class="filter partnership">
 					<h3>Filter by Partnership</h3>
 					<ul class="uppercase">
 						<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
 						<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
 						<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
 					</ul>
-				</div>
+				</div>-->
 			</div>
 		</nav>
 		<!--<header class="animated fadeIn row">
@@ -103,16 +123,14 @@
 			</div>
 			<div class="onward row">
 				<p>It's time we got to the real thrust of the matter.</p>
-				<a class="hvr-hang" href="#/positions">ONWARD &amp; UNDERWARD</a>
+				<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
 			</div>
 		</section>
 
 
 		<!-- POSITIONS CONTAINER-->
-
-
-
 		<section id="positions-container">
+			<!--CHAPTERS-->
 			<div id="chapters">
 				<div data-cancer-type="breast">
 					<div class="part1">
@@ -315,14 +333,15 @@
 					</div>
 				</div>
 			</div>
+			<!--POSITIONS-->
 			<div id="positions">
 				<div data-position="1" data-cancer-type="breast" data-partnership="ff">
-					<img alt="" src="positions/svg/1.svg">
+					<img alt="" src="img/positions/svg/1.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="1" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/1.svg">
+								<img alt="" src="img/positions/svg/1.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<table>
@@ -341,12 +360,12 @@
 					</div>
 				</div>
 				<div data-position="2" data-cancer-type="skin" data-partnership="mf">
-					<img alt="" src="positions/svg/2.alt.svg">
+					<img alt="" src="img/positions/svg/2.alt.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="2" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/2.alt.svg">
+								<img alt="" src="img/positions/svg/2.alt.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -359,12 +378,12 @@
 					</div>
 				</div>
 				<div data-position="3" data-cancer-type="testicular" data-partnership="mf">
-					<img alt="" src="positions/svg/3.svg">
+					<img alt="" src="img/positions/svg/3.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="3" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/3.svg">
+								<img alt="" src="img/positions/svg/3.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -377,12 +396,12 @@
 					</div>
 				</div>
 				<div data-position="4" data-cancer-type="skin" data-partnership="ff">
-					<img alt="" src="positions/svg/4.svg">
+					<img alt="" src="img/positions/svg/4.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="4" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/4.svg">
+								<img alt="" src="img/positions/svg/4.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -395,12 +414,12 @@
 					</div>
 				</div>
 				<div data-position="5" data-cancer-type="prostate" data-partnership="mm">
-					<img alt="" src="positions/svg/5.svg">
+					<img alt="" src="img/positions/svg/5.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="5" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/5.svg">
+								<img alt="" src="img/positions/svg/5.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -413,12 +432,12 @@
 					</div>
 				</div>
 				<div data-position="6" data-cancer-type="breast" data-partnership="ff">
-					<img alt="" src="positions/svg/6.svg">
+					<img alt="" src="img/positions/svg/6.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="6" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/6.svg">
+								<img alt="" src="img/positions/svg/6.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -431,12 +450,12 @@
 					</div>
 				</div>
 				<!--<div data-position="7" data-cancer-type="" data-partnership="mm">
-					<img alt="" src="positions/svg/7.svg">
+					<img alt="" src="img/positions/svg/7.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="7" class="detail">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/7.svg">
+								<img alt="" src="img/positions/svg/7.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -450,11 +469,11 @@
 				</div>-->
 				<div data-position="8" data-cancer-type="breast" data-partnership="ff">
 					<div class="hover-title">Hover Title</div>
-					<img alt="" src="positions/svg/8.svg">
+					<img alt="" src="img/positions/svg/8.svg">
 					<div data-position="8" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/8.svg">
+								<img alt="" src="img/positions/svg/8.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -467,12 +486,12 @@
 					</div>
 				</div>
 				<div data-position="9" data-cancer-type="testicular" data-partnership="mf">
-					<img alt="" src="positions/svg/9.svg">
+					<img alt="" src="img/positions/svg/9.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="9" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/9.svg">
+								<img alt="" src="img/positions/svg/9.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -485,12 +504,12 @@
 					</div>
 				</div>
 				<div data-position="10" data-cancer-type="skin" data-partnership="ff">
-					<img alt="" src="positions/svg/10.svg">
+					<img alt="" src="img/positions/svg/10.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="10" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/10.svg">
+								<img alt="" src="img/positions/svg/10.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -503,12 +522,12 @@
 					</div>
 				</div>
 				<div data-position="11" data-cancer-type="testicular" data-partnership="mf">
-					<img alt="" src="positions/svg/11.svg">
+					<img alt="" src="img/positions/svg/11.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="11" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/12.svg">
+								<img alt="" src="img/positions/svg/12.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -521,12 +540,12 @@
 					</div>
 				</div>
 				<div data-position="12" data-cancer-type="prostate" data-partnership="mm">
-					<img alt="" src="positions/svg/12.svg">
+					<img alt="" src="img/positions/svg/12.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="12" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="positions/svg/2.svg">
+								<img alt="" src="img/positions/svg/2.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -537,6 +556,15 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+			<!--SUPPORT THE CAUSE-->
+			<div id="support-the-cause">
+				<div data-cancer-type="breast">
+					<h4>Not Titillated Yet?</h4>
+					<p>Well perk up!</p>
+					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
+					<a class="cs-button hvr-bob">Support the Cause</a>
 				</div>
 			</div>
 		</section>
