--- a/snap-test.html
+++ b/snap-test.html
@@ -62,7 +62,7 @@
 							'selector':'#arm',
 							'states':[
 								{
-									'd':'M123.5,295.5c0.9-2.9,4.1-11.8,12.4-20.6c-5.9,1.3-8.8-0.1-8.8-0.1s-20.1-19.5-47.2-35.1 c-1.7,2.2-4.5,6.3-5.4,7.7C93.1,268.4,108.2,286.2,123.5,295.5z',
+									'd':'M123.5,295.5c0.9-2.9,4.1-11.8,12.4-20.6c-5.9,1.3-8.8-0.1-8.8-0.1S106.5,254.5,83,235 c-1.7,2.2-2.6,3.3-2.6,3.3c-1,1.5-1.9,2.9-2.8,4.3C96.2,263.8,108.2,286.2,123.5,295.5z',
 									'time':1000,
 									'delay':0,
 									'easing':null
@@ -321,7 +321,7 @@
 		});
 	</script>
 	<div class="svg-container">
-		<button id="dts1">Do the Sex</button>
+		<button class="btn btn-default btn-lg" id="dts1">Do the Sex</button>
 <svg version="1.1" id="about1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 320 500" enable-background="new 0 0 320 500" xml:space="preserve">
 <g>
@@ -386,7 +386,7 @@
 		c0.2-1,0.7-2,1.4-2.7c0.1-0.1,0.3-0.3,0.6-0.5C114.9,226.1,115.8,225.8,116.7,226z"/>
 </g>
 </svg>
-<button id="dts2">Do the Sex</button>
+<button class="btn btn-default btn-lg" id="dts2">Do the Sex</button>
 <svg version="1.1" id="about2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 1600 1060" enable-background="new 0 0 1600 1060" xml:space="preserve">
 <g>
@@ -470,14 +470,14 @@
 		c5.1,14,10.6,31.5,15.4,51.5h50.3C1372.3,1022.8,1359.1,979.9,1340.9,933.2z"/>
 </g>
 </svg>
-<button id="dts3">Do the Sex</button>
+<button class="btn btn-default btn-lg" id="dts3">Do the Sex</button>
 <svg version="1.1" id="about3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1600 1060" enable-background="new 0 0 1600 1060" xml:space="preserve">
 	<g>
 		<path id="back_leg" fill="#8DC541" d="M1188.4,958.7c-5.4-2.8-10.7-5.7-16.1-8.5c6-2.7,10.1-9.2,9.9-15.8s-4.7-13-10.9-15.4c-9.2,10-24.3,12.6-37.7,10c-13.4-2.6-25.5-9.6-37.4-16.5c-44.2-25.8-88.4-51.5-132.6-77.3c-65.4-38.1-88.8-67.4-88.8-67.4S826,717.1,746.9,644.2c-3.6-0.1-7.2-0.2-10.9-0.2c-290.9,1-478-157.3-478-157.3c19.6,37.8,37.8,74.4,54.7,109.7c68.7,46.2,164.5,93,288.2,113.5c142.4,23.6,212.6,127.6,212.6,127.6c30.9,28.9,45.7,55.8,50.6,68.5c4.1,10.6,1.8,22.5,2.1,33.8s1.9,23.2,8.7,32.3c6.6,8.8,17.3,13.8,28.1,15.5s21.8,0.4,32.6-1.3c34.4-5.6,69.6-15.8,103.7-7.5c15,3.7,28.9,10.8,43.5,15.5c14.7,4.7,31.1,6.9,45.1,0.7c2.5,6.2,5.3,13,11.2,16.2c5.8,3.3,15.2,0.3,15.3-6.4c4,5.7,13.3,6.5,18.1,1.6c4.8-4.9,3.8-14.3-2-18.1c6.1,4.4,16.2-0.2,16.8-7.7c-1.6-1.6-3.1-3.2-4.7-4.8c3.2-1.2,6.4-2.5,8.7-5.1c2.2-2.5,3.1-6.6,1-9.3C1191.1,960.2,1189.7,959.5,1188.4,958.7z"/>
 		<path id="front_leg" fill="#8DC541" d="M1365.5,769c-1.2-1-2.8-1.5-4.3-2c-6-1.9-12-3.8-18.1-5.7c5.7-3.9,8.6-11.4,7.1-18.1c-1.5-6.8-7.3-12.4-14.1-13.7c-7.5,12-22.5,17.6-36.7,17.5s-27.9-5-41.3-9.8c-50.1-17.9-100.2-35.9-150.3-53.8c-74.1-26.6-103.7-52.1-103.7-52.1s-485.7-347.9-889.4-446c0,0-0.7,1.8-2.1,5.4c-0.1-0.1-0.2-0.1-0.4-0.2l0.2,0.7C99.1,227.1,28.6,423.2,0,667.6v118.7v262.4c0.5,3.8,1.1,7.6,1.6,11.4h125.1h342.5c-27-126.5-81.8-283-174.5-476.2c-17.2-37.6-35.7-76.6-55.8-117.1c0,0,175,163.7,474.3,157.6c150.1-3.1,241.7,90.1,241.7,90.1c37.1,23.8,57.3,48.5,64.8,60.6c6.2,10.1,6.2,22.7,8.6,34.3s6.4,23.4,15,31.5c8.4,7.8,20.3,10.9,31.6,10.5c11.4-0.3,22.4-3.8,33-7.6c34.1-12.3,68.2-29.6,104.5-27.6c16,0.9,31.6,5.5,47.5,7.6c15.9,2,33.1,1.1,46.2-7.9c3.7,5.9,7.9,12.3,14.5,14.5s15.6-2.7,14.4-9.5c5.2,5.1,14.8,4.1,18.8-1.8c4-6,1.1-15.4-5.5-18.2c7.1,3.4,16.5-3.3,15.7-11.1c-1.9-1.3-3.8-2.7-5.7-4c3-1.9,6.1-3.8,7.9-6.9C1368.1,775.7,1368.2,771.3,1365.5,769zM294.7,583.8c-0.3-0.2-0.5-0.3-0.7-0.5C294.3,583.5,294.6,583.7,294.7,583.8z"/>
 	</g>
 </svg>
-<button id="dts4">Do the Sex</button>
+<button class="btn btn-default btn-lg" id="dts4">Do the Sex</button>
 <svg version="1.1" id="about4" xmlns="http://www.w3.org/2000/svg"
 	 viewBox="0 0 320 500"   preserveAspectRatio="meet">
 	<g>
@@ -519,7 +519,7 @@
 </svg>
 
 
-<button id="dts5">Do the Sex</button>
+<button class="btn btn-default btn-lg" id="dts5">Do the Sex</button>
 <svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 320 500" enable-background="new 0 0 320 500" xml:space="preserve">
 	 <rect fill="#950068" x="0" y="0" width="100%" height="100%"/>
