--- a/snap-test.html
+++ b/snap-test.html
@@ -74,6 +74,23 @@
 									'easing':null
 								}
 							]
+						},
+						{
+							'selector':'#eyebrow',
+							'states':[
+								{
+									'd':'M115.5,224.4c0.8,0.1,1.6,0.3,2.3,0.8c0.1-0.1,0-0.3-0.1-0.3c-0.7-0.3-1.4-0.7-2.1-0.9 c-0.8-0.1-1.6-0.1-2.3,0.2c-0.9,0.5-1.4,1.4-2,2.2c-0.2,0.3-0.5,0.8-0.6,1.3c0,0.1-0.1,0.3,0,0.5c0,0.1,0.2,0.1,0.3,0 c0.2-1,0.7-2,1.4-2.7c0.1-0.1,0.3-0.3,0.6-0.5C113.7,224.5,114.6,224.2,115.5,224.4z',
+									'time':1000,
+									'delay':2000,
+									'easing':null
+								},
+								{
+									'd':'M116.7,226c0.8,0.1,1.6,0.3,2.3,0.8c0.1-0.1,0-0.3-0.1-0.3c-0.7-0.3-1.4-0.7-2.1-0.9 c-0.8-0.1-1.6-0.1-2.3,0.2c-0.9,0.5-1.4,1.4-2,2.2c-0.2,0.3-0.5,0.8-0.6,1.3c0,0.1-0.1,0.3,0,0.5c0,0.1,0.2,0.1,0.3,0 c0.2-1,0.7-2,1.4-2.7c0.1-0.1,0.3-0.3,0.6-0.5C114.9,226.1,115.8,225.8,116.7,226z',
+									'time':1000,
+									'delay':1000,
+									'easing':null
+								}
+							]
 						}
 					]
 				},
