--- a/snap-test.html
+++ b/snap-test.html
@@ -43,8 +43,12 @@
 <body>
 	<style>
 		.svg-container{
-			width:400px;
-			height:400px;
+			position:relative;
+		}
+		.svg-container .btn{
+			position:absolute;
+			left:45%;
+			top:10%;
 		}
 	</style>
 	<script>
@@ -153,13 +157,13 @@
 						'selector':'#front_leg',
 						'states':[
 							{
-								'd':'M1382.2,712c-1.2-1-2.9-1.4-4.4-1.8c-6.1-1.7-6,5.8-12.2,4.1c2.1-2.2,5.5-13.2,1.5-21.3c-1.7-6.7-14-16.9-24.2-14.4c-7.1,12.3,2,26.2-24.7,26.7c-14.2,0.2-28.1-4-41.6-8.3c-50.7-16.1-101.4-32.4-152.1-48.5c-75-24-105.5-48.4-105.5-48.4S521.6,269.2,114.7,185.3c0,0-0.6,1.8-1.9,5.5c-0.1-0.1-0.2-0.1-0.4-0.2l0.2,0.7c-12,36.3-84,231.9-112.6,476.3v118.7v262.4c0.5,3.8,1.1,7.6,1.6,11.4h125.1h342.5c-28.6-134.2-81-281.3-174.5-476.2c-17.2-37.6-35.7-76.6-55.8-117.1c0,0,190.4,153,489.3,136.4c149.9-8.3,244.7,81.6,244.7,81.6c37.9,22.5,59,46.5,66.9,58.3c6.5,9.9,7,22.5,9.8,34c2.8,11.5,7.2,23.2,16.1,31c8.7,7.5,20.7,10.2,31.9,9.4c11.4-0.7,22.3-4.6,32.7-8.7c33.6-13.5,67.1-32,103.5-31.2c16,0.3,31.8,4.4,47.7,5.9c16,1.4,33.1-0.1,45.9-9.5c6.1-3.8,21.5,10,28,7.6c7.6-2.7,3.7-5.4,2.3-12.2c5.4,4.9,17.3,3,21.1-3c1.4-5.2-1.6-8.1-8.8-11.2c7.2,3.1,16.7-10.7,15.6-18.5c-3.4-3.8-6.2,0.7-8.2-0.5c2.9-2,4.4-4.3,6.1-7.5C1385.3,725.2,1385,714.2,1382.2,712zM294.7,583.8c-0.3-0.2-0.5-0.3-0.7-0.5C294.3,583.5,294.6,583.7,294.7,583.8z',
+								'd':'M276.4,285.6c-0.2-0.2-0.6-0.3-0.9-0.4c-1.2-0.3-1.2,1.2-2.4,0.8c0.4-0.4,1.1-2.6,0.3-4.3 c-0.3-1.3-2.8-3.4-4.8-2.9c-1.4,2.5,0.4,5.2-4.9,5.3c-2.8,0-5.6-0.8-8.3-1.7c-10.1-3.2-20.3-6.5-30.4-9.7 c-15-4.8-21.1-9.7-21.1-9.7s-99.5-66.2-180.9-83c0,0-0.1,0.4-0.4,1.1c0,0,0,0-0.1,0l0,0.1c-2.4,7.3-16.8,46.4-22.5,95.3v23.7v55.4 h93.8C88.1,329.1,77.6,299,58.9,260c-3.4-7.5-7.1-15.3-11.2-23.4c0,0,38.1,30.6,97.9,27.3c30-1.7,48.9,16.3,48.9,16.3 c7.6,4.5,11.8,9.3,13.4,11.7c1.3,2,1.4,4.5,2,6.8c0.6,2.3,1.4,4.6,3.2,6.2c1.7,1.5,4.1,2,6.4,1.9c2.3-0.1,4.5-0.9,6.5-1.7 c6.7-2.7,13.4-6.4,20.7-6.2c3.2,0.1,6.4,0.9,9.5,1.2c3.2,0.3,6.6,0,9.2-1.9c1.2-0.8,4.3,2,5.6,1.5c1.5-0.5,0.7-1.1,0.5-2.4 c1.1,1,3.5,0.6,4.2-0.6c0.3-1-0.3-1.6-1.8-2.2c1.4,0.6,3.3-2.1,3.1-3.7c-0.7-0.8-1.2,0.1-1.6-0.1c0.6-0.4,0.9-0.9,1.2-1.5 C277.1,288.2,277,286,276.4,285.6z M58.9,260c-0.1,0-0.1-0.1-0.1-0.1C58.9,259.9,58.9,259.9,58.9,260z',
 								'time':1000,
 								'delay':0,
 								'easing':null
 							},
 							{
-								'd':'M1365.5,769c-1.2-1-2.8-1.5-4.3-2c-6-1.9-12-3.8-18.1-5.7c5.7-3.9,8.6-11.4,7.1-18.1c-1.5-6.8-7.3-12.4-14.1-13.7c-7.5,12-22.5,17.6-36.7,17.5s-27.9-5-41.3-9.8c-50.1-17.9-100.2-35.9-150.3-53.8c-74.1-26.6-103.7-52.1-103.7-52.1s-485.7-347.9-889.4-446c0,0-0.7,1.8-2.1,5.4c-0.1-0.1-0.2-0.1-0.4-0.2l0.2,0.7C99.1,227.1,28.6,423.2,0,667.6v118.7v262.4c0.5,3.8,1.1,7.6,1.6,11.4h125.1h342.5c-27-126.5-81.8-283-174.5-476.2c-17.2-37.6-35.7-76.6-55.8-117.1c0,0,175,163.7,474.3,157.6c150.1-3.1,241.7,90.1,241.7,90.1c37.1,23.8,57.3,48.5,64.8,60.6c6.2,10.1,6.2,22.7,8.6,34.3s6.4,23.4,15,31.5c8.4,7.8,20.3,10.9,31.6,10.5c11.4-0.3,22.4-3.8,33-7.6c34.1-12.3,68.2-29.6,104.5-27.6c16,0.9,31.6,5.5,47.5,7.6c15.9,2,33.1,1.1,46.2-7.9c3.7,5.9,7.9,12.3,14.5,14.5s15.6-2.7,14.4-9.5c5.2,5.1,14.8,4.1,18.8-1.8c4-6,1.1-15.4-5.5-18.2c7.1,3.4,16.5-3.3,15.7-11.1c-1.9-1.3-3.8-2.7-5.7-4c3-1.9,6.1-3.8,7.9-6.9C1368.1,775.7,1368.2,771.3,1365.5,769zM294.7,583.8c-0.3-0.2-0.5-0.3-0.7-0.5C294.3,583.5,294.6,583.7,294.7,583.8z',
+								'd':'M273.1,297.7c-0.2-0.2-0.6-0.3-0.9-0.4c-1.2-0.4-2.4-0.8-3.6-1.1c1.1-0.8,1.7-2.3,1.4-3.6 c-0.3-1.4-1.5-2.5-2.8-2.7c-1.5,2.4-4.5,3.5-7.3,3.5s-5.6-1-8.3-2c-10-3.6-20-7.2-30.1-10.8c-14.8-5.3-20.7-10.4-20.7-10.4 s-97.1-69.6-177.9-89.2c0,0-0.1,0.4-0.4,1.1c0,0,0,0-0.1,0l0,0.1c-2.7,7.2-16.8,46.4-22.5,95.3v23.7v54.8h93.8 c-5.4-25.3-16.4-56.6-34.9-95.2c-3.4-7.5-7.1-15.3-11.2-23.4c0,0,35,32.7,94.9,31.5c30-0.6,48.3,18,48.3,18 c7.4,4.8,11.5,9.7,13,12.1c1.2,2,1.2,4.5,1.7,6.9c0.5,2.3,1.3,4.7,3,6.3c1.7,1.6,4.1,2.2,6.3,2.1c2.3-0.1,4.5-0.8,6.6-1.5 c6.8-2.5,13.6-5.9,20.9-5.5c3.2,0.2,6.3,1.1,9.5,1.5c3.2,0.4,6.6,0.2,9.2-1.6c0.7,1.2,1.6,2.5,2.9,2.9c1.3,0.4,3.1-0.5,2.9-1.9 c1,1,3,0.8,3.8-0.4c0.8-1.2,0.2-3.1-1.1-3.6c1.4,0.7,3.3-0.7,3.1-2.2c-0.4-0.3-0.8-0.5-1.1-0.8c0.6-0.4,1.2-0.8,1.6-1.4 C273.6,299,273.6,298.1,273.1,297.7z M58.9,260.6c-0.1,0-0.1-0.1-0.1-0.1C58.9,260.6,58.9,260.6,58.9,260.6z',
 								'time':1000,
 								'delay':1000,
 								'easing':null
@@ -392,8 +396,8 @@
 		c0.2-1,0.7-2,1.4-2.7c0.1-0.1,0.3-0.3,0.6-0.5C114.9,226.1,115.8,225.8,116.7,226z"/>
 </g>
 </svg>
-
-
+</div>
+<div class="svg-container">
 <button class="btn btn-default btn-lg" id="dts2">Do the Sex</button>
 <svg version="1.1" id="about2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 1600 1060" enable-background="new 0 0 1600 1060" xml:space="preserve">
@@ -478,57 +482,72 @@
 		c5.1,14,10.6,31.5,15.4,51.5h50.3C1372.3,1022.8,1359.1,979.9,1340.9,933.2z"/>
 </g>
 </svg>
+</div>
+<div class="svg-container">
 <button class="btn btn-default btn-lg" id="dts3">Do the Sex</button>
-<svg version="1.1" id="about3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1600 1060" enable-background="new 0 0 1600 1060" xml:space="preserve">
-	<g>
-		<path id="back_leg" fill="#8DC541" d="M1188.4,958.7c-5.4-2.8-10.7-5.7-16.1-8.5c6-2.7,10.1-9.2,9.9-15.8s-4.7-13-10.9-15.4c-9.2,10-24.3,12.6-37.7,10c-13.4-2.6-25.5-9.6-37.4-16.5c-44.2-25.8-88.4-51.5-132.6-77.3c-65.4-38.1-88.8-67.4-88.8-67.4S826,717.1,746.9,644.2c-3.6-0.1-7.2-0.2-10.9-0.2c-290.9,1-478-157.3-478-157.3c19.6,37.8,37.8,74.4,54.7,109.7c68.7,46.2,164.5,93,288.2,113.5c142.4,23.6,212.6,127.6,212.6,127.6c30.9,28.9,45.7,55.8,50.6,68.5c4.1,10.6,1.8,22.5,2.1,33.8s1.9,23.2,8.7,32.3c6.6,8.8,17.3,13.8,28.1,15.5s21.8,0.4,32.6-1.3c34.4-5.6,69.6-15.8,103.7-7.5c15,3.7,28.9,10.8,43.5,15.5c14.7,4.7,31.1,6.9,45.1,0.7c2.5,6.2,5.3,13,11.2,16.2c5.8,3.3,15.2,0.3,15.3-6.4c4,5.7,13.3,6.5,18.1,1.6c4.8-4.9,3.8-14.3-2-18.1c6.1,4.4,16.2-0.2,16.8-7.7c-1.6-1.6-3.1-3.2-4.7-4.8c3.2-1.2,6.4-2.5,8.7-5.1c2.2-2.5,3.1-6.6,1-9.3C1191.1,960.2,1189.7,959.5,1188.4,958.7z"/>
-		<path id="front_leg" fill="#8DC541" d="M1365.5,769c-1.2-1-2.8-1.5-4.3-2c-6-1.9-12-3.8-18.1-5.7c5.7-3.9,8.6-11.4,7.1-18.1c-1.5-6.8-7.3-12.4-14.1-13.7c-7.5,12-22.5,17.6-36.7,17.5s-27.9-5-41.3-9.8c-50.1-17.9-100.2-35.9-150.3-53.8c-74.1-26.6-103.7-52.1-103.7-52.1s-485.7-347.9-889.4-446c0,0-0.7,1.8-2.1,5.4c-0.1-0.1-0.2-0.1-0.4-0.2l0.2,0.7C99.1,227.1,28.6,423.2,0,667.6v118.7v262.4c0.5,3.8,1.1,7.6,1.6,11.4h125.1h342.5c-27-126.5-81.8-283-174.5-476.2c-17.2-37.6-35.7-76.6-55.8-117.1c0,0,175,163.7,474.3,157.6c150.1-3.1,241.7,90.1,241.7,90.1c37.1,23.8,57.3,48.5,64.8,60.6c6.2,10.1,6.2,22.7,8.6,34.3s6.4,23.4,15,31.5c8.4,7.8,20.3,10.9,31.6,10.5c11.4-0.3,22.4-3.8,33-7.6c34.1-12.3,68.2-29.6,104.5-27.6c16,0.9,31.6,5.5,47.5,7.6c15.9,2,33.1,1.1,46.2-7.9c3.7,5.9,7.9,12.3,14.5,14.5s15.6-2.7,14.4-9.5c5.2,5.1,14.8,4.1,18.8-1.8c4-6,1.1-15.4-5.5-18.2c7.1,3.4,16.5-3.3,15.7-11.1c-1.9-1.3-3.8-2.7-5.7-4c3-1.9,6.1-3.8,7.9-6.9C1368.1,775.7,1368.2,771.3,1365.5,769zM294.7,583.8c-0.3-0.2-0.5-0.3-0.7-0.5C294.3,583.5,294.6,583.7,294.7,583.8z"/>
-	</g>
-</svg>
-<button class="btn btn-default btn-lg" id="dts4">Do the Sex</button>
-<svg version="1.1" id="about4" xmlns="http://www.w3.org/2000/svg"
-	 viewBox="0 0 320 500"   preserveAspectRatio="meet">
-	<g>
-
-	<path id="blue_face" fill="#21C4F1" d="M320,356v-51.1c-16.3-6-31.4-20.3-28.3-53.4c0.2-4.4,0.8-9.2,1.7-14.4 c0,0,0.2-12.9,13.8-22.7c-1.8,1-3.6,2.1-5.4,3.3c0.1,0-20.7,11.7-32.8,9.8c0,0-13.2,0.7-27.9-7.5c0.5,0.7,1.1,1.4,1.6,2.1 c-3.7,6-9.5,10.3-16,11.9c-1.3-3-2.7-6.1-5.4-7.8c-2.6-1.7-6.7-0.9-7.3,2.4c-0.5,2.4,1.2,4.8,2.7,6.7c-6.2,0.6-12.7-2.1-17.3-7 c-2.8,6.1-8.6,15.2-14.7,19.4c0.1,7.8,2.3,16.5,8,26.1l4.5,11.2l6.4-7.2l22.4,10.5c0,0,9.5,2.9,11.4-8.5c0,0,3.3-11.1,12.8-6.9 c0,0,10.9,3.9,14.6,19c0,0,0.9,29.8,22.5,50.7c6.4,2.9,12.5,6.9,17.9,12.2c0.8,0.4,1.6,0.7,2.4,1.1L320,356L320,356z M196.6,253.4 c-0.2,0.7-0.5,1.6-1.2,1.8c-0.7-2.2,0.1-4.6,1.2-6.5c0.8-1.4,2.2-2.9,3.9-2.6c0.8,0.1,1.7,0.7,1.8,1.6 C199.6,248.5,197.6,250.7,196.6,253.4z M203.3,259.3c-0.4,0.5-0.7,1.1-1.3,1.1c-0.2,0-0.5-0.1-0.6-0.1c-2.2-1.2-2.7-4.3-1.1-6.4 c1.7-2,5.2-2.5,7-0.9C206,255,204.6,257.2,203.3,259.3z"> </path>
-
-	<path id="blue_shoulder" fill="#21C4F1" d="M315.7,210.6c1.4-0.5,2.8-0.9,4.3-1.3v-1.4c-5.2,1.8-9.4,4.1-12.7,6.5
-		c-13.6,9.8-13.8,22.7-13.8,22.7c-1,5.2-1.5,10-1.7,14.4c-1.3,29,12.6,42.8,28.3,49.3v-87.2v-4.3
-		C318.6,209.6,317.1,210.1,315.7,210.6z"/>
-
-	<path id="blue_eyebrow" d="M200.5,246.1c-1.7-0.2-3,1.2-3.9,2.6c-1.1,1.9-1.9,4.3-1.2,6.5c0.7-0.2,1-1.1,1.2-1.8
-		c1-2.8,3-4.9,5.7-5.7C202.2,246.8,201.3,246.2,200.5,246.1z">
-	</path>
-
-	<path id="hair" d="M241.1,220c-3.2-4-6.6-7.8-10.2-11.6c-2.5-2.7-5.3-5.2-8.5-6.4c-7-2.6-21.6-5-36.9,28.8
-		c-1.8,4.1-6.3,18.3-10.5,18.2c3.1,1.9,6.5,1,9.8-1.3c6.1-4.3,11.8-13.3,14.7-19.4c4.5,4.9,11,7.6,17.3,7c-1.6-1.9-3.2-4.3-2.7-6.7
-		c0.6-3.2,4.7-4.1,7.3-2.4c2.6,1.7,4.1,4.8,5.4,7.8c6.5-1.7,12.3-5.9,16-11.9C242.2,221.4,241.7,220.7,241.1,220z"/>
-
-	<path id="blue_eye" d="M200.3,253.9c-1.7,2-1.1,5.2,1.1,6.4c0.1,0,0.4,0.1,0.6,0.1c0.6,0,1-0.6,1.3-1.1c1.3-2.2,2.7-4.3,4-6.3
-		C205.5,251.4,202,251.9,200.3,253.9z">
-	</path>
-
-	<path id="purple_body" fill="#88236A" d="M203,317.9c-6.4-12.1-16.2-20.2-16.2-20.2l9.4-13.6c-31.6-17.6-48-10.3-48-10.3
-		c-40.3,22.8-22.4,40.1-22.4,40.1c7.4,10.3,19.7,33.2,24.4,42.2h156.1c-0.4-0.4-0.7-0.7-1.1-1.1c-5.4-5.3-11.5-9.3-17.9-12.2
-		c-41.1-18.9-97.6,5.1-97.6,5.1l-4.8-15.4L203,317.9c0,0-12.3-16.6-16.1-20.1 M171.5,293.9c-0.4,0.4-1,0.7-1.4,0.6
-		c-0.2,0-0.5-0.1-0.4-0.2c-1.8-1.3-1.5-4.1,0.4-5.4c1.9-1.3,5.2-1.1,6.5,0.6C174.9,290.9,173.2,292.4,171.5,293.9z"/>
-
-	<path id="purple_eye" d="M170.1,288.8c-1.9,1.3-2.2,4.1-0.4,5.4c-0.1,0.1,0.1,0.2,0.4,0.2c0.5,0.1,1.1-0.2,1.4-0.6
-		c1.7-1.4,3.4-3,5.1-4.4C175.2,287.7,172,287.5,170.1,288.8z"/>
-
-	<path id="purple_eyebrow" d="M168.9,283.9c-1.7-0.2-3.1,1.1-4.1,2.4c-1.3,1.8-2.4,4.1-1.8,6.4c0.7-0.2,1.1-1,1.3-1.7
-		c1.2-2.6,3.5-4.7,6.1-5.4C170.4,284.7,169.7,284,168.9,283.9z"/>
-		
-	<path id="beard" d="M194.2,317.1c-10.8,5.2-14-6.4-14-6.4l11.7-8.1c-1.2-1.3-5-4.8-5-4.8c-11.4,7.4-9.7,12.7-9.7,12.6
-		c8.1,19.7,17,14.5,17,14.5l8.8-6.9c-1.1-2-3.8-6.3-3.8-6.3C198.8,315.5,194.2,317.1,194.2,317.1z">
-	</path>
-
+<svg version="1.1" id="about3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 144 320 211.9" enable-background="new 0 144 320 211.9" xml:space="preserve">
+<g>
+	<path id="back_leg" fill="#8DC541" d="M237.7,335.6c-1.1-0.6-2.1-1.1-3.2-1.7c1.2-0.5,2-1.8,2-3.2c0-1.3-0.9-2.6-2.2-3.1c-1.8,2-4.9,2.5-7.5,2
+		s-5.1-1.9-7.5-3.3c-8.8-5.2-17.7-10.3-26.5-15.5c-13.1-7.6-17.8-13.5-17.8-13.5s-9.8-10.1-25.6-24.7c-0.7,0-1.4,0-2.2,0
+		c-58.2,0.2-95.6-31.5-95.6-31.5c3.9,7.6,7.6,14.9,10.9,21.9c13.7,9.2,32.9,18.6,57.6,22.7c28.5,4.7,42.5,25.5,42.5,25.5
+		c6.2,5.8,9.1,11.2,10.1,13.7c0.8,2.1,0.4,4.5,0.4,6.8s0.4,4.6,1.7,6.5c1.3,1.8,3.5,2.8,5.6,3.1s4.4,0.1,6.5-0.3
+		c6.9-1.1,13.9-3.2,20.7-1.5c3,0.7,5.8,2.2,8.7,3.1c2.9,0.9,6.2,1.4,9,0.1c0.5,1.2,1.1,2.6,2.2,3.2c1.2,0.7,3,0.1,3.1-1.3
+		c0.8,1.1,2.7,1.3,3.6,0.3c1-1,0.8-2.9-0.4-3.6c1.2,0.9,3.2,0,3.4-1.5c-0.3-0.3-0.6-0.6-0.9-1c0.6-0.2,1.3-0.5,1.7-1
+		c0.4-0.5,0.6-1.3,0.2-1.9C238.2,335.9,237.9,335.8,237.7,335.6z"/>
+	<path id="front_leg" fill="#8DC541" d="M273.1,297.7c-0.2-0.2-0.6-0.3-0.9-0.4c-1.2-0.4-2.4-0.8-3.6-1.1c1.1-0.8,1.7-2.3,1.4-3.6
+		c-0.3-1.4-1.5-2.5-2.8-2.7c-1.5,2.4-4.5,3.5-7.3,3.5s-5.6-1-8.3-2c-10-3.6-20-7.2-30.1-10.8c-14.8-5.3-20.7-10.4-20.7-10.4
+		s-97.1-69.6-177.9-89.2c0,0-0.1,0.4-0.4,1.1c0,0,0,0-0.1,0l0,0.1c-2.7,7.2-16.8,46.4-22.5,95.3v23.7v54.8h93.8
+		c-5.4-25.3-16.4-56.6-34.9-95.2c-3.4-7.5-7.1-15.3-11.2-23.4c0,0,35,32.7,94.9,31.5c30-0.6,48.3,18,48.3,18
+		c7.4,4.8,11.5,9.7,13,12.1c1.2,2,1.2,4.5,1.7,6.9c0.5,2.3,1.3,4.7,3,6.3c1.7,1.6,4.1,2.2,6.3,2.1c2.3-0.1,4.5-0.8,6.6-1.5
+		c6.8-2.5,13.6-5.9,20.9-5.5c3.2,0.2,6.3,1.1,9.5,1.5c3.2,0.4,6.6,0.2,9.2-1.6c0.7,1.2,1.6,2.5,2.9,2.9c1.3,0.4,3.1-0.5,2.9-1.9
+		c1,1,3,0.8,3.8-0.4c0.8-1.2,0.2-3.1-1.1-3.6c1.4,0.7,3.3-0.7,3.1-2.2c-0.4-0.3-0.8-0.5-1.1-0.8c0.6-0.4,1.2-0.8,1.6-1.4
+		C273.6,299,273.6,298.1,273.1,297.7z M58.9,260.6c-0.1,0-0.1-0.1-0.1-0.1C58.9,260.6,58.9,260.6,58.9,260.6z"/>
 </g>
 </svg>
+</div>
+<div class="svg-container">
+<button class="btn btn-default btn-lg" id="dts4">Do the Sex</button>
+
+<svg version="1.1" id="about4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 144 320 211.9" enable-background="new 0 144 320 211.9" xml:space="preserve">
+<g>
+	<path id="blue_face" fill="#21C4F1" d="M319.8,355.6v-51.1c-16.3-6-31.4-20.3-28.3-53.4c0.2-4.4,0.8-9.2,1.7-14.4
+		c0,0,0.2-12.9,13.8-22.7c-1.8,1-3.6,2.1-5.4,3.3c0.1,0-20.7,11.7-32.8,9.8c0,0-13.2,0.7-27.9-7.5c0.5,0.7,1.1,1.4,1.6,2.1
+		c-3.7,6-9.5,10.3-16,11.9c-1.3-3-2.7-6.1-5.4-7.8c-2.6-1.7-6.7-0.9-7.3,2.4c-0.5,2.4,1.2,4.8,2.7,6.7c-6.2,0.6-12.7-2.1-17.3-7
+		c-2.8,6.1-8.6,15.2-14.7,19.4c0.1,7.8,2.3,16.5,8,26.1l4.5,11.2l6.4-7.2l22.4,10.5c0,0,9.5,2.9,11.4-8.5c0,0,3.3-11.1,12.8-6.9
+		c0,0,10.9,3.9,14.6,19c0,0,0.9,29.8,22.5,50.7c6.4,2.9,12.5,6.9,17.9,12.2c0.8,0.4,1.6,0.7,2.4,1.1L319.8,355.6L319.8,355.6z
+		 M196.4,253c-0.2,0.7-0.5,1.6-1.2,1.8c-0.7-2.2,0.1-4.6,1.2-6.5c0.8-1.4,2.2-2.9,3.9-2.6c0.8,0.1,1.7,0.7,1.8,1.6
+		C199.4,248.1,197.4,250.3,196.4,253z M203.1,258.9c-0.4,0.5-0.7,1.1-1.3,1.1c-0.2,0-0.5-0.1-0.6-0.1c-2.2-1.2-2.7-4.3-1.1-6.4
+		c1.7-2,5.2-2.5,7-0.9C205.8,254.6,204.4,256.8,203.1,258.9z"/>
+	<path id="blue_shoulder" fill="#21C4F1" d="M315.5,210.2c1.4-0.5,2.8-0.9,4.3-1.3v-1.4c-5.2,1.8-9.4,4.1-12.7,6.5
+		c-13.6,9.8-13.8,22.7-13.8,22.7c-1,5.2-1.5,10-1.7,14.4c-1.3,29,12.6,42.8,28.3,49.3v-87.2v-4.3
+		C318.4,209.2,316.9,209.7,315.5,210.2z"/>
+	<path id="blue_eyebrow" d="M200.3,245.7c-1.7-0.2-3,1.2-3.9,2.6c-1.1,1.9-1.9,4.3-1.2,6.5c0.7-0.2,1-1.1,1.2-1.8
+		c1-2.8,3-4.9,5.7-5.7C202,246.4,201.1,245.8,200.3,245.7z"/>
+	<path id="hair" d="M240.9,219.6c-3.2-4-6.6-7.8-10.2-11.6c-2.5-2.7-5.3-5.2-8.5-6.4c-7-2.6-21.6-5-36.9,28.8
+		c-1.8,4.1-6.3,18.3-10.5,18.2c3.1,1.9,6.5,1,9.8-1.3c6.1-4.3,11.8-13.3,14.7-19.4c4.5,4.9,11,7.6,17.3,7c-1.6-1.9-3.2-4.3-2.7-6.7
+		c0.6-3.2,4.7-4.1,7.3-2.4c2.6,1.7,4.1,4.8,5.4,7.8c6.5-1.7,12.3-5.9,16-11.9C242,221,241.5,220.3,240.9,219.6z"/>
+	<path id="blue_eye" d="M200.1,253.5c-1.7,2-1.1,5.2,1.1,6.4c0.1,0,0.4,0.1,0.6,0.1c0.6,0,1-0.6,1.3-1.1c1.3-2.2,2.7-4.3,4-6.3
+		C205.3,251,201.8,251.5,200.1,253.5z"/>
+	<path id="purple_body" fill="#88236A" d="M202.8,317.5c-6.4-12.1-16.2-20.2-16.2-20.2l9.4-13.6c-31.6-17.6-48-10.3-48-10.3
+		c-40.3,22.8-22.4,40.1-22.4,40.1c7.4,10.3,19.7,33.2,24.4,42.2h156.1c-0.4-0.4-0.7-0.7-1.1-1.1c-5.4-5.3-11.5-9.3-17.9-12.2
+		c-41.1-18.9-97.6,5.1-97.6,5.1l-4.8-15.4L202.8,317.5c0,0-12.3-16.6-16.1-20.1 M171.3,293.5c-0.4,0.4-1,0.7-1.4,0.6
+		c-0.2,0-0.5-0.1-0.4-0.2c-1.8-1.3-1.5-4.1,0.4-5.4s5.2-1.1,6.5,0.6C174.7,290.5,173,292,171.3,293.5z"/>
+	<path id="purple_eye" d="M169.9,288.4c-1.9,1.3-2.2,4.1-0.4,5.4c-0.1,0.1,0.1,0.2,0.4,0.2c0.5,0.1,1.1-0.2,1.4-0.6
+		c1.7-1.4,3.4-3,5.1-4.4C175,287.3,171.8,287.1,169.9,288.4z"/>
+	<path id="purple_eyebrow" d="M168.7,283.5c-1.7-0.2-3.1,1.1-4.1,2.4c-1.3,1.8-2.4,4.1-1.8,6.4c0.7-0.2,1.1-1,1.3-1.7
+		c1.2-2.6,3.5-4.7,6.1-5.4C170.2,284.3,169.5,283.6,168.7,283.5z"/>
+	<path id="beard" d="M194,316.7c-10.8,5.2-14-6.4-14-6.4l11.7-8.1c-1.2-1.3-5-4.8-5-4.8c-11.4,7.4-9.7,12.7-9.7,12.6
+		c8.1,19.7,17,14.5,17,14.5l8.8-6.9c-1.1-2-3.8-6.3-3.8-6.3C198.6,315.1,194,316.7,194,316.7z"/>
+</g>
+</svg>
+</div>
+<div class="svg-container">
 
 
 <button class="btn btn-default btn-lg" id="dts5">Do the Sex</button>
-<svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!--<svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 320 500" enable-background="new 0 0 320 500" xml:space="preserve">
 	 <rect fill="#950068" x="0" y="0" width="100%" height="100%"/>
 <path id="right_leg" fill="#FFFFFF" d="M269.2,185c0-2.8-3-2.3-3-2.3c-0.8-3-3-1.9-3-1.9c0.4-1.3-1.5-2.1-1.5-2.1c-1.2-0.5-1.8,0.7-1.8,0.7
@@ -543,7 +562,25 @@
 	c0,0-3-0.4-3,2.3c0,0-3.5,0.1-2,4.4c1.3,3.9,5.6,13.8,5.6,13.8s2.6,6.7,2.8,9.2c0.2,2.5,1.3,5,2.4,6.5c0,0,0.3,0.5,0.6,1.2
 	c0.3,2,1.9,14.9,0.6,28c-1.5,14.2-4.5,32.6,29.4,69.3c0,0,3.7,3.3,3,6.5c-0.3,1.5-0.3,14.5,1.4,32.2h41.6
 	C129.1,344.2,121.9,329.9,113.2,315.4z"/>
+</svg>-->
+<svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 144 320 355" enable-background="new 0 144 320 211.9" xml:space="preserve" width="100%">
+<g>
+	<rect fill="#950068" x="0" y="0" width="100%" height="100%"/>
+	<path id="right_leg" fill="#FFFFFF" d="M270.5,184.8c0-2.8-3-2.3-3-2.3c-0.8-3-3-1.9-3-1.9c0.4-1.3-1.5-2.1-1.5-2.1c-1.2-0.5-1.8,0.7-1.8,0.7
+		c0-1.4-1.9-2.2-1.9-2.2c-3.6-1.1-3.1,2.8-3,3.6c0.1,0.8-0.5,2.7-0.5,2.7c-0.7,1.8-0.2,4.9,0.4,6.4c0.6,1.5,0.3,7.8-0.1,9.7
+		c-0.5,1.9-1.3,5.6-1.4,7.1c-0.1,1.5-0.8,2.8-0.8,2.8c-1.6,2-2.1,4.4-2.2,6.2c0,0.5-0.3,1.4-0.7,2.4c-12.6,21.8-19.7,41.8-21.7,46.5
+		c-2,4.8-15.1,33.7-15.1,33.7c-3.8,4.2-8.9,17.2-8.9,17.2c-8.8,14.5-15.9,28.7-20.1,40.5h41.6c1.7-17.7,1.8-30.7,1.5-32.2
+		c-0.7-3.1,3-6.5,3-6.5c17.4-13.7,26.6-45.5,25.2-59.7c-1.3-13.5,4.2-35.2,4.9-37.6c0.3-0.7,0.5-1.1,0.5-1.1c1.1-1.6,2.2-4,2.4-6.5
+		c0.2-2.5,2.8-9.2,2.8-9.2s4.2-9.9,5.6-13.8C273.9,184.9,270.5,184.8,270.5,184.8z"/>
+	<path id="left_leg" fill="#FFFFFF" d="M114.5,315.2c0,0-5.1-13-8.9-17.2c0,0-13.1-29-15.1-33.7s-9.2-25.3-22.1-47.4c-0.2-0.5-0.3-1-0.3-1.6
+		c-0.1-1.8-0.6-4.2-2.2-6.2c0,0-0.7-1.3-0.8-2.8s-0.9-5.2-1.3-7.1c-0.5-1.9-0.7-8.2-0.1-9.7s1.1-4.6,0.4-6.4c0,0-0.6-1.9-0.5-2.7
+		c0.1-0.8,0.6-4.8-3-3.6c0,0-1.9,0.7-1.9,2.2c0,0-0.6-1.2-1.8-0.7c0,0-1.8,0.8-1.5,2.1c0,0-2.2-1.1-3,1.9c0,0-3-0.4-3,2.3
+		c0,0-3.5,0.1-2,4.4c1.3,3.9,5.6,13.8,5.6,13.8s2.6,6.7,2.8,9.2s1.3,5,2.4,6.5c0,0,0.3,0.5,0.6,1.2c0.3,2,1.9,14.9,0.6,28
+		c-1.5,14.2-4.5,32.6,29.4,69.3c0,0,3.7,3.3,3,6.5c-0.3,1.5-0.3,14.5,1.4,32.2h41.6C130.4,344,123.2,329.7,114.5,315.2z"/>
+</g>
 </svg>
+</div>
 
 
 
