--- a/snap-test.html
+++ b/snap-test.html
@@ -543,7 +543,7 @@
 </g>
 </svg>
 </div>
-<div class="svg-container">
+<div class="svg-container" style="background-color:purple">
 
 
 <button class="btn btn-default btn-lg" id="dts5">Do the Sex</button>
@@ -563,7 +563,7 @@
 	c0.3,2,1.9,14.9,0.6,28c-1.5,14.2-4.5,32.6,29.4,69.3c0,0,3.7,3.3,3,6.5c-0.3,1.5-0.3,14.5,1.4,32.2h41.6
 	C129.1,344.2,121.9,329.9,113.2,315.4z"/>
 </svg>-->
-<svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!--<svg version="1.1" id="about5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 144 320 355" enable-background="new 0 144 320 211.9" xml:space="preserve" width="100%">
 <g>
 	<rect fill="#950068" x="0" y="0" width="100%" height="100%"/>
@@ -579,7 +579,8 @@
 		c0,0-3.5,0.1-2,4.4c1.3,3.9,5.6,13.8,5.6,13.8s2.6,6.7,2.8,9.2s1.3,5,2.4,6.5c0,0,0.3,0.5,0.6,1.2c0.3,2,1.9,14.9,0.6,28
 		c-1.5,14.2-4.5,32.6,29.4,69.3c0,0,3.7,3.3,3,6.5c-0.3,1.5-0.3,14.5,1.4,32.2h41.6C130.4,344,123.2,329.7,114.5,315.2z"/>
 </g>
-</svg>
+</svg>-->
+<svg id="about5" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 144 320 211.9" xml:space="preserve" viewBox="0 144 320 211.9" height="100%" width="100%" version="1.1" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/"><metadata id="metadata3123"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/><dc:title/></cc:Work></rdf:RDF></metadata><g id="g3113" fill="#FFF"><path  id="right_leg"  d="M270.5,184.8c0-2.8-3-2.3-3-2.3-0.8-3-3-1.9-3-1.9,0.4-1.3-1.5-2.1-1.5-2.1-1.2-0.5-1.8,0.7-1.8,0.7,0-1.4-1.9-2.2-1.9-2.2-3.6-1.1-3.1,2.8-3,3.6s-0.5,2.7-0.5,2.7c-0.7,1.8-0.2,4.9,0.4,6.4s0.3,7.8-0.1,9.7c-0.5,1.9-1.3,5.6-1.4,7.1s-0.8,2.8-0.8,2.8c-1.6,2-2.1,4.4-2.2,6.2,0,0.5-0.3,1.4-0.7,2.4-12.6,21.8-19.7,41.8-21.7,46.5-2,4.8-15.1,33.7-15.1,33.7-3.8,4.2-8.9,17.2-8.9,17.2-8.8,14.5-15.9,28.7-20.1,40.5h41.6c1.7-17.7,1.8-30.7,1.5-32.2-0.7-3.1,3-6.5,3-6.5,17.4-13.7,26.6-45.5,25.2-59.7-1.3-13.5,4.2-35.2,4.9-37.6,0.3-0.7,0.5-1.1,0.5-1.1,1.1-1.6,2.2-4,2.4-6.5s2.8-9.2,2.8-9.2,4.2-9.9,5.6-13.8c1.2-4.3-2.2-4.4-2.2-4.4z"/><path  id="left_leg" d="M114.5,315.2s-5.1-13-8.9-17.2c0,0-13.1-29-15.1-33.7s-9.2-25.3-22.1-47.4c-0.2-0.5-0.3-1-0.3-1.6-0.1-1.8-0.6-4.2-2.2-6.2,0,0-0.7-1.3-0.8-2.8s-0.9-5.2-1.3-7.1c-0.5-1.9-0.7-8.2-0.1-9.7s1.1-4.6,0.4-6.4-0.6-1.9-0.5-2.7,0.6-4.8-3-3.6c0,0-1.9,0.7-1.9,2.2,0,0-0.6-1.2-1.8-0.7,0,0-1.8,0.8-1.5,2.1,0,0-2.2-1.1-3,1.9,0,0-3-0.4-3,2.3,0,0-3.5,0.1-2,4.4,1.3,3.9,5.6,13.8,5.6,13.8s2.6,6.7,2.8,9.2,1.3,5,2.4,6.5,0.3,0.5,0.6,1.2c0.3,2,1.9,14.9,0.6,28-1.5,14.2-4.5,32.6,29.4,69.3,0,0,3.7,3.3,3,6.5-0.3,1.5-0.3,14.5,1.4,32.2h41.6c-4.4-11.7-11.6-26-20.3-40.5z"/></g></svg>
 </div>
 
 
