moved js/css assets, add about.js for loading about animations form animations-about.json, snap-test,

--- a/snap-test-2.html
+++ b/snap-test-2.html
@@ -54,7 +54,7 @@
 	<script>
 		$(function(){
 
-			var animations = {
+			var aboutAnimations = {
 				one : {
 					'file':'img/about/full/1.png',
 					'topLevelSelector': '#about1',
