--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 	<title>The Cancer Sutra</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="css/animate.css"></style>
+	<link rel="stylesheet" href="css/assets/animate.css"></style>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
-	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></style>
-	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></style>-->
 	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></style>
 	<link rel="stylesheet" href="fonts/keplerstd/socialico.css"></style>
 	<link rel="stylesheet" href="css/app.css"></style>
@@ -91,7 +89,7 @@
 		  </svg>-->
 		  <img alt="" src="img/loader.svg">
 		</div>
-		<section id="about">
+		<!--<section id="about">
 			<div class="one row">
 				<div class="col-sm-5 col-sm-offset-7">
 					<h2>This project exists to help save lives.</h2>
@@ -124,6 +122,23 @@
 			<div class="onward row">
 				<p>It's time we got to the real thrust of the matter.</p>
 				<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
+			</div>
+		</section>-->
+		<section id="about">
+			<div class="one row">
+				<svg id="about1" width="100%" height="100%"></svg>
+			</div>
+			<div class="two row">
+				<svg id="about1" width="100%" height="100%"></svg>
+			</div>
+			<div class="three row">
+				<svg id="about1" width="100%" height="100%"></svg>
+			</div>
+			<div class="four row">
+				<svg id="about1" width="100%" height="100%"></svg>
+			</div>
+			<div class="onward row">
+				<svg id="about5" width="100%" height="100%"></svg>
 			</div>
 		</section>
 
@@ -589,27 +604,27 @@
 	<div class="overlay overlay-contentscale">
 		<a id="close">&#215;</a>
 	</div>
-	<script src="js/routie.min.js"></script>
+
+	<script src="js/assets/routie.min.js"></script>
 
 	<!-- jQuery 2 For Modern Browsers -->
 	<!--[if !IE]><!-->
-		<script src="js/jquery-2.1.1.min.js"></script>
+		<script src="js/assets/jquery-2.1.1.min.js"></script>
 	<!--<![endif]-->
 
 	<!-- jQuery 1 for IE9 and Earlier -->
 	<!--[if lte IE 9]>
-		<script src="js/jquery-1.11.2.min.js"></script>
+		<script src="js/assets/jquery-1.11.2.min.js"></script>
 	<![endif]-->
 
-	<script src="js/imagesloaded.pkgd.min.js"></script>
+	<script src="js/assets/imagesloaded.pkgd.min.js"></script>
 	<!--<script src="js/jquery.touchSwipe.min.js"></script>-->
-	<!--<script src="js/hammer.min.js"></script>-->
-	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/assets/snap.svg-min.js"></script>
+	<script src="js/assets/isotope.pkgd.min.js"></script>
 	<!--<script src="js/wow.min.js"></script>-->
-	<script src="js/mousetrap.min.js"></script>
+	<script src="js/assets/mousetrap.min.js"></script>
 	<script src="js/assets.js"></script>
-	<!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
-	<!--<script src="fancybox/v3beta/jquery.fancybox.js"></script>-->
+	<script src="js/about.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
